z-index related issues fixing

--- a/nxdev/notificationx/frontend/scss/_themes/_gdpr.scss
+++ b/nxdev/notificationx/frontend/scss/_themes/_gdpr.scss
@@ -15,7 +15,7 @@
         left: 30px;
         min-width: 480px;
         max-width: 480px; 
-        z-index: 9999999;
+        z-index: 999;
     }
     &.banner-gdpr { 
         position: fixed;
